--- a/figures/index.html
+++ b/figures/index.html
@@ -25,16 +25,16 @@
 </head>
 
 <body>
-    <div class="container">
-        <!-- <div class="col-12"> -->
-            <span class="col-auto">- max charge</span>
-            <div class="col-6 gradient-box gradient-box-red"></div>
-            <span class="col-auto">0</span>
-        <!-- </div> -->
+    <div class="container pt-5">
         <div class="col-12">
             <span class="col-auto">- max charge</span>
-            <div class="col-6 gradient-box gradient-box-red"></div>
             <span class="col-auto">0</span>
+            <div class="col-6 gradient-box gradient-box-red"></div>
+        </div>
+        <div class="col-12">
+            <span class="col-auto">0</span>
+            <span class="col-auto">+ max charge</span>
+            <div class="col-6 gradient-box gradient-box-blue"></div>
         </div>
     </div>
 </body>
